Fixed alignment on spinner

--- a/app/css/guitarjournal.css
+++ b/app/css/guitarjournal.css
@@ -433,8 +433,6 @@ input[type="text"]:focus, textarea:focus, input[type="date"]:focus, input[type="
 #spinner {  
     width:100%;
     height:100%;
-    margin-left:-10px;
-    margin-right:-10px;
     background-color:black;
     z-index:1000;
     opacity:0.8;
